--- a/wode/wo/loan.html
+++ b/wode/wo/loan.html
@@ -44,28 +44,30 @@
 			        </div>
 			    </div>			   
 			</div>
-			<div class="_line"></div>			
-			<style type="text/css">
-				li{height: 72px;border-bottom: 1px solid #e2e2e2;display: block;margin: 0 0.24rem;}
-				li img{float: left;width: 41px;height: 41px;margin: 15.5px 0.28rem 15.5px 0;}
-			</style>
-			<ul>
+			<div class="_line"></div>
+			<ul class="product">
 				<li>
                     <a href="http://new.zljianjie.com/prod/details/id/72/money/1000.html">
                         <img src="http://jjadmin22.zljianjie.com/public/uploads/images/20170908/84b08d7aa5f4d63e642e85a6b58f2296.png">
-                        <div class="index_content_r">
-                            <p>91借钱</p>
-                            <p>申请人数：<span class="sp1">175860人</span><span class="sp2">0.05%<span>/日</span></span>
-                            </p>
-                            <p><span class="sp1">现金贷</span><i></i>2天放款
-                                <span class="sp2">可贷<span>200-10000</span>元</span>
-                            </p>
+                        <div class="proinfor">
+                            <p class="title">91借钱</p>
+                            <p class="proinfordetail">
+                            	<span>额度：200-10000元</span>
+                            	<span>期限：7-14天</span>
+                            </p>                            
                         </div>
                     </a>
-                </li>
-				
+                </li>				
 			</ul>
-			
+			<div class="loadmore">
+				加载更多
+			</div>
+			<div class="notamore">
+				没有更多了
+			</div>
+			<div class="loading">
+				<img src="img/load.gif"/>
+			</div>
 			<div class="footer"></div>			
 			<footer class="flexBox">
 				<div class="flex">
