--- a/wode/wo/managemoney.html
+++ b/wode/wo/managemoney.html
@@ -30,7 +30,7 @@
 		<script type="text/javascript" src="js/swiper.js" ></script>
 	</head>
 	<body>
-		
+
 			<div class="swiper-container">
 			    <div class="swiper">
 			        <div class="item">
@@ -44,8 +44,32 @@
 			        </div>
 			    </div>			   
 			</div>
-			
-			
+			<div class="_line"></div>
+			<ul class="product">
+				<li>
+                    <a href="http://new.zljianjie.com/prod/details/id/72/money/1000.html">
+                        <img src="http://jjadmin22.zljianjie.com/public/uploads/images/20170908/84b08d7aa5f4d63e642e85a6b58f2296.png">
+                        <div class="proinfor">
+                            <p class="title">91借钱</p>
+                            <p class="proinfordetail">
+                            	<span>年化率：15%</span>
+                            	<span>期限：14天</span>
+                            </p>
+                        </div>
+                    </a>
+                </li>				
+			</ul>
+
+			<div class="loadmore">
+				加载更多
+			</div>
+			<div class="notamore">
+				没有更多了
+			</div>
+			<div class="loading">
+				<img src="img/load.gif"/>
+			</div>
+
 			<div class="footer"></div>			
 			<footer class="flexBox">
 				<div class="flex focus">
