--- a/wode/wo/login.html
+++ b/wode/wo/login.html
@@ -27,7 +27,7 @@
 		
 		<style type="text/css">
 			html{background: #f0f0f0;}
-			body{overflow: hidden;clear:both;}
+			.login_box{overflow: hidden;}
 			label{display: block;background: #fff;height: 40px;margin:20px 0.3rem;border-radius: 5px;border:1px solid #f0f0f0;}
 			label.focus{border:1px solid red;}
 			label.focus i{float: right;width:6px;height: 6px;background: red;border-radius: 6px;margin:17px 10px;}
@@ -35,6 +35,7 @@
 			
 			input{border: none;background: transparent;height: 100%;}
 			.login_btn{border-radius:5px;width: 6rem;margin:20px auto;background:#4191e8;color: #fff;text-align: center;line-height: 40px;height: 40px;}
+			.login_btn.focus{background: #ccc;color: #fff;}
 			p{padding: 0 0.3rem;overflow: hidden;}
 			p a{float: right;text-decoration: underline;font-size: 12px;}
 			p span{color:red;font-size: 12px;padding-left:5px;}
@@ -42,21 +43,22 @@
 		<script type="text/javascript" src="js/jquery-2.1.0.js" ></script>
 	</head>
 	<body>
-		<label>
-			<input type="text" placeholder="请输入用户名" />
-			<i></i>
-		</label>
-		
-		<label>
-			<input type="text" placeholder="请输入密码" />
-			<i></i>
-		</label>
-		<p>
-			<span>错误</span>
-			<a href="javascript:;">暂无账户，去注册</a>
-		</p>
-		<div class="login_btn">
-			登录
+		<div class="login_box">						
+			<label>
+				<input type="text" placeholder="请输入用户名" />
+				<i></i>
+			</label>			
+			<label>
+				<input type="text" placeholder="请输入密码" />
+				<i></i>
+			</label>
+			<p>
+				<span>错误</span>
+				<a href="javascript:;">暂无账户，去注册</a>
+			</p>
+			<div class="login_btn">
+				登录
+			</div>
 		</div>
 	</body>
 </html>
