--- a/wode/wo/register.html
+++ b/wode/wo/register.html
@@ -35,6 +35,7 @@
 			
 			input{border: none;background: transparent;height: 100%;}
 			.login_btn{border-radius:5px;width: 6rem;margin:20px auto;background:#4191e8;color: #fff;text-align: center;line-height: 40px;height: 40px;}
+			.login_btn.focus{background: #ccc;color: #fff;}
 			p{padding: 0 0.3rem;overflow: hidden;}
 			p a{float: right;text-decoration: underline;font-size: 12px;}
 			p span{color:red;font-size: 12px;padding-left:5px;}
